[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
rand = "0.8.5"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
uuid = { version = "1.11.0", features = ["v4"] }